[tool.poetry]
name = "aggregator-researches"
version = "0.1.0"
description = ""
authors = ["qznetsow <ilyaqznetsow@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pydantic = "^2.10.6"
httpx = "^0.28.1"
pytoniq-core = "^0.1.41"
loguru = "^0.7.3"
datamodel-code-generator = "^0.28.1"
pytoniq = "^0.1.40"
jinja2 = "^3.1.5"
pyvis = "^0.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
